Side nav gets close on click. Scroll to view support for xs. alignment issues solved. global option now visible in landscape mode.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,10 @@
   z-index: 102;
 }
 
+.mat-toolbar-single-row {
+  padding: 0;
+}
+
 .toolbarSpan:hover {
   cursor: pointer;
 }
@@ -103,6 +107,7 @@
 @media screen and (max-height: 450px) {
   .sidenav {
     padding-top: 15px;
+    margin-top: 1.5cm;
   }
   .sidenav a {
     font-size: 18px;
