--- a/src/app/continent/continent.component.scss
+++ b/src/app/continent/continent.component.scss
@@ -1,16 +1,14 @@
-.global-container{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-
-
+.global-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
-.spinnerclass{
+.spinnerclass {
   width: 100%;
   height: 100%;
   display: flex;
@@ -18,160 +16,156 @@
   align-items: center;
 }
 
-::ng-deep .custom-spinner circle{
-  stroke:#1f2833;
+::ng-deep .custom-spinner circle {
+  stroke: #1f2833;
 }
 
-.continent-name{
-  margin:22px;
+.continent-name {
+  margin: 22px;
 }
 
-
-.row{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-basis: 90%;
-    max-height: 6cm;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    flex-wrap: wrap;
-
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-basis: 90%;
+  max-height: 6cm;
+  margin-left: 20px;
+  margin-right: 30px;
+  margin-top: 55px;
+  margin-bottom: 40px;
+  flex-wrap: wrap;
 }
 
-.box_container{
-    margin: 5px;
-    width: 180px;
-    //height: 100px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    box-sizing: border-box;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    transition: 0.3s;
+.box_container {
+  margin: 5px;
+  width: 180px;
+  //height: 100px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  box-sizing: border-box;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: 0.3s;
 }
 
-.number_container{
-    width: 100%;
-    display: flex;
-    justify-content: center ;
-    align-items: center;
-    height: 2cm;
-    //flex: 5;
-    background-color: #f0fff4;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+.number_container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2cm;
+  //flex: 5;
+  background-color: #f0fff4;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
-.type_container{
-    //flex: 1;
-    width: 100%;
-    height: 0.7cm;
-    display: flex;
-    justify-content: center ;
-    align-items: center;
-    background-color: #1f2833;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+.type_container {
+  //flex: 1;
+  width: 100%;
+  height: 0.7cm;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1f2833;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
-.number_container_red{
-    width: 100%;
-    display: flex;
-    justify-content: center ;
-    align-items: center;
-    height: 2cm;
-    //flex: 5;
-    background-color: #fff5f5;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+.number_container_red {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2cm;
+  //flex: 5;
+  background-color: #fff5f5;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
-.type_container_red{
-    //flex: 1;
-    width: 100%;
-    height: 0.7cm;
-    display: flex;
-    justify-content: center ;
-    align-items: center;
-    background-color: #1f2833;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+.type_container_red {
+  //flex: 1;
+  width: 100%;
+  height: 0.7cm;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1f2833;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
-.number_container_grey{
-    width: 100%;
-    display: flex;
-    justify-content: center ;
-    align-items: center;
-    height: 2cm;
-    //flex: 5;
-    background-color: #edf2f7;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+.number_container_grey {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2cm;
+  //flex: 5;
+  background-color: #edf2f7;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
-.type_container_grey{
-    //flex: 1;
-    width: 100%;
-    height: 0.7cm;
-    display: flex;
-    justify-content: center ;
-    align-items: center;
-    background-color:#1f2833;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+.type_container_grey {
+  //flex: 1;
+  width: 100%;
+  height: 0.7cm;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1f2833;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
-.box_container:hover{
-    -webkit-transform: scale(1.1);
-        -ms-transform: scale(1.1);
-        transform: scale(1.1);
+.box_container:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
-@media screen and (min-width: 0px) and (max-width: 599.9px){
-
-  .continent-name{
+@media screen and (min-width: 0px) and (max-width: 599.9px) {
+  .continent-name {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .box_container{
+  .box_container {
     width: 150px;
   }
 
-  .type_container{
+  .type_container {
     width: 100%;
     height: 0.7cm;
   }
 
-  .number_container{
+  .number_container {
     width: 100%;
     height: 2cm;
   }
 
-  .type_container_red{
+  .type_container_red {
     width: 100%;
     height: 0.7cm;
   }
 
-  .number_container_red{
+  .number_container_red {
     width: 100%;
     height: 2cm;
   }
 
-  .type_container_grey{
+  .type_container_grey {
     width: 100%;
     height: 0.7cm;
   }
 
-  .number_container_grey{
+  .number_container_grey {
     width: 100%;
     height: 2cm;
   }
-
 }
