--- a/src/app/country/country.component.scss
+++ b/src/app/country/country.component.scss
@@ -1,16 +1,15 @@
-.global-container{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    flex-direction: column;
+.global-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  flex-direction: column;
 }
 
-
-.spinnerclass{
+.spinnerclass {
   width: 100%;
   height: 100%;
   display: flex;
@@ -18,29 +17,28 @@
   align-items: center;
 }
 
-::ng-deep .custom-spinner circle{
-  stroke:#1f2833;
+::ng-deep .custom-spinner circle {
+  stroke: #1f2833;
 }
 
-
-.highchart-container{
-    width: 100%;
-    background-color: #1f2833;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.highchart-container {
+  width: 100%;
+  background-color: #1f2833;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.highchart{
-    width: 95%;
-    height: 400px;
-    display: block;
-    margin-top:10px ;
-    margin-bottom:10px ;
+.highchart {
+  width: 95%;
+  height: 400px;
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.row{
+.row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -48,12 +46,12 @@
   max-height: 6cm;
   margin-left: 30px;
   margin-right: 30px;
-  margin-top: 35px;
+  margin-top: 50px;
   margin-bottom: 35px;
   flex-wrap: wrap;
 }
 
-.box_container{
+.box_container {
   margin: 5px;
   width: 180px;
   //height: 100px;
@@ -65,11 +63,10 @@
   transition: 0.3s;
 }
 
-
-.number_container{
+.number_container {
   width: 100%;
   display: flex;
-  justify-content: center ;
+  justify-content: center;
   align-items: center;
   height: 2cm;
   //flex: 5;
@@ -78,22 +75,22 @@
   border-top-right-radius: 8px;
 }
 
-.type_container{
+.type_container {
   //flex: 1;
   width: 100%;
   height: 0.7cm;
   display: flex;
-  justify-content: center ;
+  justify-content: center;
   align-items: center;
   background-color: #1f2833;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 }
 
-.number_container_red{
+.number_container_red {
   width: 100%;
   display: flex;
-  justify-content: center ;
+  justify-content: center;
   align-items: center;
   height: 2cm;
   //flex: 5;
@@ -102,22 +99,26 @@
   border-top-right-radius: 8px;
 }
 
-.type_container_red{
+.type_container_red {
   //flex: 1;
   width: 100%;
   height: 0.7cm;
   display: flex;
-  justify-content: center ;
+  justify-content: center;
   align-items: center;
   background-color: #1f2833;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 }
 
-.number_container_grey{
+.country-name {
+  margin: 22px;
+}
+
+.number_container_grey {
   width: 100%;
   display: flex;
-  justify-content: center ;
+  justify-content: center;
   align-items: center;
   height: 2cm;
   //flex: 5;
@@ -126,60 +127,57 @@
   border-top-right-radius: 8px;
 }
 
-.type_container_grey{
+.type_container_grey {
   //flex: 1;
   width: 100%;
   height: 0.7cm;
   display: flex;
-  justify-content: center ;
+  justify-content: center;
   align-items: center;
-  background-color:#1f2833;
+  background-color: #1f2833;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 }
 
-
-@media screen and (min-width: 0px) and (max-width: 599.9px){
-
-  .country-name{
+@media screen and (min-width: 0px) and (max-width: 599.9px) {
+  .country-name {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .box_container{
-    width: 150px; 
+  .box_container {
+    width: 150px;
   }
 
-  .type_container{
+  .type_container {
     width: 100%;
     height: 0.7cm;
   }
 
-  .number_container{
+  .number_container {
     width: 100%;
     height: 2cm;
   }
 
-  .type_container_red{
+  .type_container_red {
     width: 100%;
     height: 0.7cm;
   }
 
-  .number_container_red{
+  .number_container_red {
     width: 100%;
     height: 2cm;
   }
 
-  .type_container_grey{
+  .type_container_grey {
     width: 100%;
     height: 0.7cm;
   }
 
-  .number_container_grey{
+  .number_container_grey {
     width: 100%;
     height: 2cm;
   }
-
 }
