--- a/src/app/world-table/world-table.component.scss
+++ b/src/app/world-table/world-table.component.scss
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   width: 92%;
-  max-height: 12cm;
+  max-height: 18cm;
   //margin-left: 50px;
   margin-top: 20px;
   border-radius: 10px;
